--- a/EQBClosingPortal_SelfAssertedSignUp.html
+++ b/EQBClosingPortal_SelfAssertedSignUp.html
@@ -135,14 +135,16 @@
 </head>
 <body>
     <div id="background_branding_container" data-tenant-branding-background-color="true">
-      <img data-tenant-branding-background="true" src="https://azcnceqbb2c.blob.core.windows.net/root/BackgroungImage.png" />
+      <!-- <img data-tenant-branding-background="true" src="https://azcnceqbb2c.blob.core.windows.net/root/BackgroungImage.png" /> -->
+      <img data-tenant-branding-background="true" src="https://raw.githubusercontent.com/neelpateleqb/Azure-B2C-Pages---EQB-Closing-Portal/main/BackgroungImage.png" />
     </div>
     <div class="container  self_asserted_container " role="presentation">
         <div class="row">
             <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-body">                     
-<img data-tenant-branding-logo="true" alt="Company Logo" src="https://azcnceqbb2c.blob.core.windows.net/root/EQ" />
+<!-- <img data-tenant-branding-logo="true" alt="Company Logo" src="https://azcnceqbb2c.blob.core.windows.net/root/EQ" /> -->
+<img data-tenant-branding-logo="true" alt="Company Logo" src="https://raw.githubusercontent.com/neelpateleqb/Azure-B2C-Pages---EQB-Closing-Portal/main/EQ%20Bank%20Transparent%20Logo.png" />
                         <div id="api" role="main">
                         </div>
                         <span id="consentInfo">By providing the above information, you agree to the terms of our <b>Privacy Agreement &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">English</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">French</a>&#41;</b></span>
