--- a/EQBClosingPortal_SelfAssertedSignUp.html
+++ b/EQBClosingPortal_SelfAssertedSignUp.html
@@ -144,7 +144,7 @@
                 <div class="panel panel-default">
                     <div class="panel-body">                     
 <!-- <img data-tenant-branding-logo="true" alt="Company Logo" src="https://azcnceqbb2c.blob.core.windows.net/root/EQ" /> -->
-<img data-tenant-branding-logo="true" alt="Company Logo" style="height:60px" />
+<img id="data-tenant-logo" data-tenant-branding-logo="true" alt="Company Logo" />
                         <div id="api" role="main">
                         </div>
                         <span id="consentInfo">By providing the above information, you agree to the terms of our <b>Privacy Agreement &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">English</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">French</a>&#41;</b></span>
