--- a/EQBClosingPortal_SelfAssertedSignUp.html
+++ b/EQBClosingPortal_SelfAssertedSignUp.html
@@ -148,7 +148,9 @@
                         <div id="api" role="main">
                         </div>
                         <span id="consentInfo">By providing the above information, you agree to the terms of our <b>Privacy Agreement &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">English</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">French</a>&#41;</b></span>
-                    </div>
+                   	<span>Test 1</span>
+		    
+		    </div>
                 </div>
             </div>
         </div>
