--- a/EQBClosingPortal_SelfAssertedSignUp.html
+++ b/EQBClosingPortal_SelfAssertedSignUp.html
@@ -100,6 +100,9 @@
 				#surname{
 					margin-bottom:30px;
 				}
+	    #data-tenant-logo{
+		    height:60px;
+	    }
     </style>
     <style id="idpselector">
         #SignInWithLogonNameExchange, #SignUpWithLogonEmailExchange, #SignUpWithLogonNameExchange {
@@ -148,7 +151,7 @@
                         <div id="api" role="main">
                         </div>
                         <span id="consentInfo">By providing the above information, you agree to the terms of our <b>Privacy Agreement &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">English</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">French</a>&#41;</b></span>
-                   	<span>Test 1</span>
+                   	<span>Test 2</span>
 		    
 		    </div>
                 </div>
