--- a/EQBClosingPortal_SelfAssertedSignUp.html
+++ b/EQBClosingPortal_SelfAssertedSignUp.html
@@ -103,6 +103,13 @@
 	    #data-tenant-logo{
 		    height:60px;
 	    }
+	    .consent-en:lang(en),
+	.consent-fr:lang(fr) {
+	    display: inherit !important;
+	}
+	.consent {
+	    display: none;
+	}
     </style>
     <style id="idpselector">
         #SignInWithLogonNameExchange, #SignUpWithLogonEmailExchange, #SignUpWithLogonNameExchange {
@@ -150,7 +157,8 @@
 <img id="data-tenant-logo" data-tenant-branding-logo="true" alt="Company Logo" />
                         <div id="api" role="main">
                         </div>
-                        <span id="consentInfo">By providing the above information, you agree to the terms of our <b>Privacy Agreement &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">English</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">French</a>&#41;</b></span>
+                        <span class="consent consent-en">By providing the above information, you agree to the terms of our <b>Privacy Agreement &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">English</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">French</a>&#41;</b></span>
+			<span class="consent consent-fr">En fournissant les informations ci-dessus, vous acceptez les conditions de notre <b>Entente sur la protection des renseignements personnels &#40;<a class="underline-link" href="https://www.equitablebank.ca/privacy-agreement" target="_blank">Anglaise</a> | <a class="underline-link" href="https://www.equitablebank.ca/fr/privacy-agreement" target="_blank">Française</a>&#41;</b></span>
 		    </div>
                 </div>
             </div>
